Create new html files for recipes, update index structure to link them

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
 
-    <h1>Odin Recipes</h1>
+    <main>
+        <h1>Odin Recipes</h1>
 
-    <ul>
-        <li><a href="recipes/lasagna.html">Recipe for lasagna</a></li>
-        
-    </ul>
+        <section>
+            <h2>Italian cuisine</h2>
+            <ul>
+                <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="recipes/saltimbocca.html">Saltimbocca a la Romana</a></li>
+                <li><a href="recipes/parmigiana.html">Parmigiana di melanzane</a></li>
+            </ul>
+        </section>
+    </main>
     
 </body>
 </html>
