--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 
     <main>
-        <h1>Odin Recipes</h1>
-
+        <header>
+            <h1>Odin Recipes</h1>
+        </header>
+        
         <section>
             <h2>Italian cuisine</h2>
             <ul>
@@ -20,6 +22,6 @@
             </ul>
         </section>
     </main>
-    
+
 </body>
 </html>
