Update template for reciped page, copy across pages

--- a/recipes/saltimbocca.html
+++ b/recipes/saltimbocca.html
@@ -3,11 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Saltimbocca</h1>
-    
+    <header>
+        <h1>Odin Recipes</h1>
+    </header>
+
+    <section>
+        <h2>Saltimbocca a la Romana</h2>
+        <img src="../images/Saltimbocca.jpg" alt="Grilled steaks with ham and aromatic herbs" width="500">
+        <article>
+            <h3>Description</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates reprehenderit rem natus atque aspernatur eligendi doloribus illum numquam? 
+                Nisi maxime possimus numquam amet qui animi dicta. 
+                Fuga nemo laudantium sed!</p>
+        </article>
+        <article>
+            <h3>Ingredients</h3>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </article>
+        <article>
+            <h3>Steps</h3>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </article>
+           
+    </section>
+
 </body>
 </html>
